src/css/main.css
html, body {
  height: 100%;
}

.container-fluid {
  width: 100%;
}

#map {
  height: 100%;
  width: 100%;
}

#list {
  height: 100%;
  overflow: auto;
}

.navbar {
  margin-bottom: 0;
}

#main-content {
  height: calc(100% - 52px);
}

#main-content .row,
#main-content .col {
  height: 100%;
}

#main-content .col-no-gutter {
  padding-left: 0;
  padding-right: 0;
}

.offcanvas-toggle {
  position: relative;
  float: left;
  padding: 9px 10px;
  margin-top: 8px;
  margin-right: 15px;
  margin-bottom: 8px;
  background-color: transparent;
  background-image: none;
  border: 1px solid #ddd;
  border-radius: 4px;
}

.offcanvas-toggle .icon-bar {
  display: block;
  width: 22px;
  height: 2px;
  background-color: #888;
  border-radius: 1px;
}

.offcanvas-toggle .icon-bar+.icon-bar {
  margin-top: 4px;
}

.loading-spinner {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgba(0, 0, 0, 0.3);
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 50;
}

.loading-spinner .spinner {
  animation-duration: 3s;
  animation-name: spin;
  animation-iteration-count: infinite;
}

@keyframes spin {
  from {transform:rotate(0deg);}
  to {transform:rotate(360deg);}
}

/*
 * Off Canvas - http://getbootstrap.com/examples/offcanvas/
 * --------------------------------------------------
 */
.row-offcanvas {
  position: relative;
  -webkit-transition: all .25s ease-out;
       -o-transition: all .25s ease-out;
          transition: all .25s ease-out;
}

.row-offcanvas-left {
  left: 0;
}

.row-offcanvas-left.active
.sidebar-offcanvas {
  left: 0;
}

.row-offcanvas-left
.sidebar-offcanvas {
  left: -50%;
}

.row-offcanvas-left.active #map-container {
  left: 50%;
}

.sidebar-offcanvas {
  position: absolute;
  top: 0;
  width: 50%;
}

@media (min-width: 768px) {
  .row-offcanvas-left
  .sidebar-offcanvas {
    left: -25%;
  }

  .row-offcanvas-left.active #map-container {
    left: 25%;
  }

  .sidebar-offcanvas {
    width: 25%;
  }
}

